@@ -5,7 +5,7 @@ describe "class_matchers plugin" do
   it "allows class specific regexps with type conversion for class matchers" do
     app(:bare) do
       plugin :class_matchers
-      class_matcher(Date, /(\d\d\d\d)-(\d\d)-(\d\d)/){|y,m,d| [Date.new(y.to_i, m.to_i, d.to_i)]}
+      class_matcher(Date, /(\d\d\d\d)-(\d\d)-(\d\d)/){|y,m,d| [Date.new(y.to_i, m.to_i, d.to_i)] if Date.valid_date?(y.to_i, m.to_i, d.to_i)}
       class_matcher(Array, /(\w+)\/(\w+)/){|a, b| [[a, 1], [b, 2]]}
       class_matcher(Hash, /(\d+)\/(\d+)/){|a, b| [{a.to_i=>b.to_i}]}
 
@@ -34,6 +34,7 @@ describe "class_matchers plugin" do
     body("/c/d/e").must_equal 'array'
     body("/c/d/2009-10-a").must_equal 'array'
     body("/c/d/2009-10-01").must_equal '2009-10-1-c-1-d-2'
+    body("/c/d/2009-13-01").must_equal 'array'
     body("/c/d/1/2").must_equal '{1=>2}-c-1-d-2'
     body("/c/d/e/f").must_equal 'e-1-f-2-c-1-d-2'
   end
